indicator-appmenu (12.10.4-0ubuntu1) UNRELEASED; urgency=low

  * debian/control:
    - Reorganize Build-Depends for clarity.
    - Adjust style to be consistent with other indicator packages.
    - Drop Build-Depends on cdbs.
    - Bump debhelper Build-Depends to (>= 9). 
  * debian/compat: bump compat level to 9.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Wed, 21 Nov 2012 10:05:45 -0500

indicator-appmenu (12.10.3-0ubuntu3) raring; urgency=low

  * Backported r218, should fix menus not working when an application is
    closed and restarted directly (lp: #1075263)

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 12 Nov 2012 17:16:17 +0100

indicator-appmenu (12.10.3-0ubuntu2) quantal-proposed; urgency=low

  * Backport an upstream fix:
    - Many LibreOffice menu items don't show up in the HUD (LP: #1068546)

 -- Didier Roche <didrocks@ubuntu.com>  Fri, 19 Oct 2012 12:03:58 +0200

indicator-appmenu (12.10.3-0ubuntu1) quantal; urgency=low

  * New upstream release.
  - add the hud awareness protocol, an efficient way to notify applications that
    the HUD will open (required for libreoffice)
  - fix hud match highlighting (lp #961000)

 -- Sebastien Bacher <seb128@ubuntu.com>  Thu, 04 Oct 2012 20:06:45 +0200

indicator-appmenu (12.10.2-0ubuntu1) quantal; urgency=low

  * New upstream release:
    - Implement HUD support for gmenumodel based indicators (lp: #1042824)

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 02 Oct 2012 23:02:39 +0200

indicator-appmenu (12.10.1-0ubuntu1) quantal; urgency=low

  * New upstream release.
    - Support for webapps in the indicator-appmenu (LP: #1048992)
    - Port appmenu indicator to gtk_widget_insert_action_group()

 -- Ken VanDine <ken.vandine@canonical.com>  Wed, 19 Sep 2012 15:02:13 -0400

indicator-appmenu (12.10.0-0ubuntu2) quantal; urgency=low

  * Backport lp:~desrt/indicator-appmenu/insert-action-group should fix 
    some segfault issues with nautilus and libreoffice
