@@ -6,6 +6,10 @@ indicator-appmenu (12.10.4-0ubuntu1) UNRELEASED; urgency=low
     - Drop Build-Depends on cdbs.
     - Bump debhelper Build-Depends to (>= 9). 
   * debian/compat: bump compat level to 9.
+  * debian/rules:
+    - Convert to using the dh sequencer.
+    - Make sure the build fails if there are files not listed in install files
+      when building the packages.
 
  -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Wed, 21 Nov 2012 10:05:45 -0500
 
